# CIFCodec

./: .gitmodules  CMakeLists.txt
src/: CIFCodec.cpp  CIFCodec.h  CloseWindow.cpp  CloseWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
